apps/home-assistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-web
  namespace: home-assistant
spec:
  hostnames:
    - home-assistant.lan
  parentRefs:
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: web
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
